fixing problems on tablet version

--- a/style.css
+++ b/style.css
@@ -24,6 +24,10 @@ body {
   overflow-x: hidden;
 }
 
+body.overflow {
+  overflow-y: hidden;
+}
+
 .wrapper {
   max-width: 1200px;
   padding-inline: 10px;
@@ -103,6 +107,7 @@ body {
     border: none;
     color: #ffffff;
     font-size: 30px;
+    z-index: 5;
   }
   .burger__close {
     display: none;
@@ -119,7 +124,14 @@ body {
   .header__nav.active {
     position: fixed;
     inset: 0;
-    display: block;
+    display: flex;
+    justify-content: center;
+    background-color: rgb(62, 135, 245);
+    z-index: 1;
+    align-items: center;
+  }
+  .list {
+    flex-direction: column;
   }
 }
 
@@ -248,21 +260,6 @@ body {
   transform: translate(-50%, -50%);
 }
 
-.footer {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  padding-inline: 130px;
-  padding-bottom: 5rem;
-  padding-top: 120px;
-}
-
-.footer__header {
-  list-style: none;
-  display: flex;
-  gap: 50px;
-}
-
 .h1__ending {
   display: flex;
   flex-direction: column;
@@ -280,17 +277,8 @@ body {
   padding-block: 25px;
   padding-inline: 35px;
   border-radius: 25px;
-}
-
-.text h3 {
-  color: rgba(0, 0, 0, 0.5);
-  font-size: 20px;
-  font-weight: 500;
-}
-
-.footer__list {
-  font-size: 24px;
-  font-weight: 500;
+  background: #ffffff;
+  border-style: none;
 }
 
 .recomendations__heading {
@@ -519,4 +507,36 @@ body {
   padding-inline: 16px;
   background-color: #f1f1fd;
   border-radius: 100px;
+}
+
+.footer {
+  padding-bottom: 5rem;
+  padding-top: 120px;
+}
+
+.footer__heading {
+  color: rgba(0, 0, 0, 0.5);
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.footer__list {
+  list-style: none;
+  display: flex;
+  gap: 50px;
+}
+
+.footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media (max-width: 769px) {
+  .footer__wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+  .h1__ending h1 {
+    font-size: 38px;
+  }
 }
